fixed cursor overlap and menu not working properly on scroll

--- a/src/styles/cursor.scss
+++ b/src/styles/cursor.scss
@@ -11,6 +11,7 @@
         rgba(255, 255, 255, 0.04) 0%,
         rgba(255, 255, 255, 0) 50%
     );
+    pointer-events: none;
 }
 // html {
 //     cursor: none;
